--- a/WebChatPortal/public/group.css
+++ b/WebChatPortal/public/group.css
@@ -1,18 +1,26 @@
+$font-family:   "Roboto",sans-serif;
+$font-size:     15px;
 
-$font-size:     20px;
+$color-primary: #ABA194;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
+a{
+    text-decoration: none;
+    font-family: "Roboto",sans-serif;
+    font-size:18px;
+    color: white;
+}
 body {
     font-family: "Roboto",sans-serif;
-    font-size:   30px;
+    font-size:  18px;
     background-size: 200% 100% !important;
     animation: move 10s ease infinite;
     transform: translate3d(0, 0, 0);
-    background:#f4f7f6;
+    background: #f4f7f6;
     height: 100vh
 }
 
@@ -22,26 +30,27 @@ body {
     margin: 10vh auto;
 }
 
-.user_header {
+.user__header {
     text-align: center;
     opacity: 0;
-     margin-bottom: -10px;
-    margin-top:50px;
     transform: translate3d(0, 500px, 0);
     animation: arrive 500ms ease-in-out 0.7s forwards;
+    
 }
-img{
-    position: relative;
-    margin-bottom: -10px;
-    margin-top: -70px;
-    margin-left: -30px;
-}
+
 .user__title {
-    font-size: 50px;
+    font-size:  18px;
     margin-bottom: -10px;
     font-weight: 500;
-    color: greenyellow;
-    font-family: 'Nunito', sans-serif,bold;
+    color: white;
+}
+
+.msg__title {
+    font-size:  18px;
+    margin-bottom: -10px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: white;
 }
 
 .form {
@@ -53,64 +62,66 @@ img{
     animation: arrive 500ms ease-in-out 0.9s forwards;
 }
 
-.form__no {
+.form--no {
     animation: NO 1s ease-in-out;
     opacity: 1;
     transform: translate3d(0, 0, 0);
+}
+
+.list {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #f4f7f6;
+  font-size: 18px;
+  transition: 0.2s;
+
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.header {
+  background-color: #f4f7f6;
+  padding: 10px;
+  text-align: left;
+  font-family: "Roboto",sans-serif;
+  font-size: 18px;  
 }
 
 .form__input {
     display: block;
     width: 100%;
     padding: 20px;
-    font-size: 15px;
-    font-family: "Roboto",sans-serif;
+    font-family:"Roboto",sans-serif;
     -webkit-appearance: none;
     border: 0;
     outline: 0;
-    transition: 0.1s;
+    transition: 0.3s;
     
     &:focus {
         background: darken(#fff, 3%);
     }
 }
+
 .btn {
     display: block;
     width: 100%;
     padding: 20px;
     font-family: "Roboto",sans-serif;
-    font-size: 15px;
     -webkit-appearance: none;
     outline: 0;
     border: 0;
     color: white;
     background: #49C5B6;
     transition: 0.3s;
-    
+    font-size: 18px;
     &:hover {
-        background: darken( #6600ff;, 5%);
+        background: darken(#49C5B6;, 5%);
     }
 }
-
-.btn2 {
-    display: block;
-    border-radius: 6px;
-    width: 50%;
-    padding: 20px;
-    font-size: 15px;
-    font-family: "Roboto",sans-serif;
-    -webkit-appearance: none;
-    outline: 0;
-    border: 0;
-    float:right;
-    color: white;
-    background: #49C5B6;
-    transition: 0.5s;
-    &:hover {
-        background: darken( #6600ff;, 5%);
-    }
-}
-
 
 @keyframes NO {
   from, to {
