--- a/WebChatPortal/public/invite.css
+++ b/WebChatPortal/public/invite.css
@@ -1,5 +1,8 @@
+$font-family:   "Roboto",sans-serif;
+$font-size:     15px;
 
-$font-size:     20px;
+$color-primary: #ABA194;
+
 * {
     margin: 0;
     padding: 0;
@@ -8,12 +11,13 @@ $font-size:     20px;
 
 body {
     font-family: "Roboto",sans-serif;
-    font-size:   30px;
+    font-size:  15px;
     background-size: 200% 100% !important;
     animation: move 10s ease infinite;
     transform: translate3d(0, 0, 0);
-    background:#f4f7f6;
-    height: 100vh
+    background: #f4f7f6;
+    height: 100vh;
+    
 }
 
 .user {
@@ -22,28 +26,23 @@ body {
     margin: 10vh auto;
 }
 
-.user_header {
+.user__header {
     text-align: center;
     opacity: 0;
-     margin-bottom: -10px;
-    margin-top:50px;
     transform: translate3d(0, 500px, 0);
     animation: arrive 500ms ease-in-out 0.7s forwards;
 }
-img{
-    position: relative;
-    margin-bottom: -10px;
-    margin-top: -70px;
-    margin-left: -30px;
-}
-.user__title {
-    font-size: 50px;
-    margin-bottom: -10px;
-    font-weight: 500;
-    color: greenyellow;
-    font-family: 'Nunito', sans-serif,bold;
-}
 
+.user__title {
+    font-family: "Roboto",sans-serif;
+    font-size:20px;
+    margin-bottom: 50px;
+    font-weight: 500;
+    color: #6600ff;
+}
+a{
+    text-decoration: none;
+}
 .form {
     margin-top: 40px;
     border-radius: 6px;
@@ -53,7 +52,7 @@ img{
     animation: arrive 500ms ease-in-out 0.9s forwards;
 }
 
-.form__no {
+.form--no {
     animation: NO 1s ease-in-out;
     opacity: 1;
     transform: translate3d(0, 0, 0);
@@ -63,54 +62,34 @@ img{
     display: block;
     width: 100%;
     padding: 20px;
-    font-size: 15px;
-    font-family: "Roboto",sans-serif;
+    font-family:"Roboto",sans-serif;
     -webkit-appearance: none;
     border: 0;
     outline: 0;
-    transition: 0.1s;
+    transition: 0.3s;
     
     &:focus {
         background: darken(#fff, 3%);
     }
 }
+
 .btn {
     display: block;
     width: 100%;
     padding: 20px;
     font-family: "Roboto",sans-serif;
-    font-size: 15px;
     -webkit-appearance: none;
     outline: 0;
     border: 0;
     color: white;
     background: #49C5B6;
     transition: 0.3s;
+    font-size:20px;
     
     &:hover {
-        background: darken( #6600ff;, 5%);
+        background: darken(#49C5B6, 5%);
     }
 }
-
-.btn2 {
-    display: block;
-    border-radius: 6px;
-    width: 50%;
-    padding: 20px;
-    font-size: 15px;
-    font-family: "Roboto",sans-serif;
-    -webkit-appearance: none;
-    outline: 0;
-    border: 0;
-    float:right;
-    color: white;
-    background: #49C5B6;
-    transition: 0.5s;
-    &:hover {
-        background: darken( #6600ff;, 5%);
-    }
-}
-
 
 @keyframes NO {
   from, to {
